# exito_tracker

fb-lead-automation/: README.md
fb-lead-automation/backend/: .env.example  .gitignore  pyproject.toml  requirements.txt  run.py
fb-lead-automation/backend/app/: __init__.py  config.py  extensions.py
fb-lead-automation/backend/app/jobs/: ad_sync_job.py
fb-lead-automation/backend/app/models/: __init__.py  ad.py  lead.py  message_template.py
fb-lead-automation/backend/app/routes/: ads.py  leads.py  messages.py  webhook.py
fb-lead-automation/backend/app/services/: facebook_service.py  messenger_service.py  template_service.py
fb-lead-automation/frontend/: index.html  package-lock.json  package.json
fb-lead-automation/frontend/src/: App.jsx
fb-lead-automation/frontend/src/components/ads/: AdCard.jsx  AdsList.jsx
fb-lead-automation/frontend/src/components/leads/: LeadsTable.jsx
fb-lead-automation/frontend/src/components/messages/: MessageEditor.jsx
fb-lead-automation/frontend/src/hooks/: useAds.js  useLeads.js  useMessages.js
fb-lead-automation/frontend/src/pages/: AdsPage.jsx  LeadsPage.jsx  MessagesPage.jsx
fb-lead-automation/frontend/src/services/: adsService.js  api.js  leadsService.js  messagesService.js
