[project]
name = "fb-lead-automation"
version = "0.1.0"
description = "Add your project description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "Flask==3.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "Flask-Migrate==4.0.5",
    "Flask-CORS==4.0.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "APScheduler==3.10.4",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
